[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT"
repository = "https://github.com/compenguy/AoC2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "3.0.0-beta.5", default-features = false, features = ["color", "std", "cargo"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.18", default-features = false, features = ["colors"] }
dirs = "4"
chrono = "0.4"
