[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT"
repository = "https://github.com/compenguy/AoC2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "aocbench"
harness = false
